Bug 229930 - tests/sys/acl/00:main fails in CI due to unexpected error message
Summary: tests/sys/acl/00:main fails in CI due to unexpected error message
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: CURRENT
Hardware: Any Any
: --- Affects Many People
Assignee: Mark Johnston
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-21 18:21 UTC by Alan Somers
Modified: 2018-11-17 20:59 UTC (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alan Somers freebsd_committer freebsd_triage 2018-07-21 18:21:04 UTC
tests/sys/acl/00:main has been failing in CI for quite some time.  On a head kernel from March-23 it passes; I don't know when it began to fail.  It seems that the problem is a simple matter of setfacl printing the wrong error message (or the test expecting the wrong error message).  The test expects

"setfacl: nnn: stat() failed: No such file or directory"

But what actually happens is:

"setfacl: nnn: pathconf(..., _PC_ACL_NFS4) failed: No such file or directory"
Comment 1 Alan Somers freebsd_committer freebsd_triage 2018-07-21 18:21:30 UTC
Assigning to Ed Maste because he's the only person who has touched setfacl lately.
Comment 2 Alan Somers freebsd_committer freebsd_triage 2018-07-21 18:22:41 UTC
Also, tests/sys/acl/02:main is suffering from the same problem.
Comment 3 commit-hook freebsd_committer freebsd_triage 2018-07-22 21:01:05 UTC
A commit references this bug:

Author: asomers
Date: Sun Jul 22 21:00:12 UTC 2018
New revision: 336617
URL: https://svnweb.freebsd.org/changeset/base/336617

Log:
  Temporarily disable the sys/acl/00 and sys/acl/02 tests

  These tests are failing due to PR 229930.  Unfortunately, TAP tests can't be
  marked as expected failures.

  PR:		229930
  Reported by:	Jenkins

Changes:
  head/tests/sys/acl/Makefile
Comment 4 commit-hook freebsd_committer freebsd_triage 2018-10-26 19:02:32 UTC
A commit references this bug:

Author: markj
Date: Fri Oct 26 19:01:52 UTC 2018
New revision: 339781
URL: https://svnweb.freebsd.org/changeset/base/339781

Log:
  Don't print pathconf() errors if the target file doesn't exist.

  The subsequent acl_get_file(3) call will simply echo the same error.

  PR:		229930
  MFC after:	2 weeks
  Sponsored by:	The FreeBSD Foundation

Changes:
  head/bin/setfacl/setfacl.c
Comment 5 commit-hook freebsd_committer freebsd_triage 2018-10-26 19:03:35 UTC
A commit references this bug:

Author: markj
Date: Fri Oct 26 19:03:31 UTC 2018
New revision: 339782
URL: https://svnweb.freebsd.org/changeset/base/339782

Log:
  Update and re-enable ACL tests following r332396 and r339781.

  PR:		229930
  MFC after:	2 weeks
  Sponsored by:	The FreeBSD Foundation

Changes:
  head/tests/sys/acl/Makefile
  head/tests/sys/acl/tools-nfs4-psarc.test
  head/tests/sys/acl/tools-nfs4.test
  head/tests/sys/acl/tools-posix.test
Comment 6 commit-hook freebsd_committer freebsd_triage 2018-11-17 20:59:10 UTC
A commit references this bug:

Author: markj
Date: Sat Nov 17 20:58:37 UTC 2018
New revision: 340523
URL: https://svnweb.freebsd.org/changeset/base/340523

Log:
  MFC r339781:
  Don't print pathconf() errors if the target file doesn't exist.

  MFC r339782:
  Update and re-enable ACL tests.

  PR:	229930

Changes:
_U  stable/12/
  stable/12/bin/setfacl/setfacl.c
  stable/12/tests/sys/acl/Makefile
  stable/12/tests/sys/acl/tools-nfs4-psarc.test
  stable/12/tests/sys/acl/tools-nfs4.test
  stable/12/tests/sys/acl/tools-posix.test